Fixed the bootbox not shown bug: put bootstrap.css go after boostrap-spacelab.css in BundleConfig.cs. And fixed the alignment bugs in bootbox confirm buttons. Added a class "btn-main" to adjust margin-bottom of "new customer" button. Deleted the .btn class margin properties. Set random FacebookAppId and AppScret values since this is only Demo project.

--- a/VideoStore/Content/Site.css
+++ b/VideoStore/Content/Site.css
@@ -1,16 +1,17 @@
-﻿:root {
+﻿/*   comment this part because this version doesnot support variables.
+    :root {
     --bs-font-sans-serif: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
     --bs-body-font-family: var(--bs-font-sans-serif);
     --bs-body-font-weight: 400;
     --bs-body-color: #777;
-}
+}*/
 
 body {
-    font-family: var(--bs-body-font-family);
-    font-weight: var(--bs-body-font-weight);
-    color: var(--bs-body-color);
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-weight: 400;
+    color: #777;
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -40,44 +41,41 @@ textarea {
 h2{
   margin: 1rem 0;
 }
-.btn {
+
+.btn-main {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-/*
-.form-group,
-.checkbox,
-
-
- .checkbox{
-     margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-*/
 
 .field-validation-error,
 label.error {
     color: red;
-}
+}    
+
 .input-validation-error,
 input.error{
     border: 1px solid red;
 }
+
 .validation-summary-errors {
     color: red;
 }
+
 .btn-default {
     background-color: #eceff1;
 }
+
 label{
     font-weight: 500;
 }
+
 .input-sm {
     text-align:center;
     font-size: 13px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
+
 .navbar {
     padding-right: 1rem;
 }
